Run Spotless on files modified in previous commit